--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "less": "^4.1.3",
+    "less": "^4.1.2",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
