--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.7",
+    "element-ui": "^2.13.2",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.0",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
